<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp4" >

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="@dimen/text_small"
                android:paddingRight="@dimen/dp4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/displayUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp4"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="left"
        android:orientation="vertical" >
            
            <Button
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:text="@string/search_button"
                android:id="@+id/SearchButton"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>
        
        <Button
            	android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:text="@string/browse_button"
                android:id="@+id/BrowseButton"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>
        
        <Button
            	android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:text="@string/near_by_button"
                android:id="@+id/NearByButton"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>
        
        <Button
            	android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:text="@string/review"
                android:id="@+id/review_button"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>
        
        <Button
            	android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:text="@string/Rate"
                android:id="@+id/rate_button"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>

        <Button
            	android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:text="@string/FriendList"
                android:id="@+id/friend_list_button"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>

        <Button
            	android:layout_width="fill_parent"
                android:layout_height="@dimen/dp48"
                android:text="@string/Inbox"
                android:id="@+id/inbox_button"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>

    </LinearLayout>

    <Button
        android:id="@+id/LogOutButton"
        android:layout_width="@dimen/dp96"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp4"
        android:text="@string/log_out_button"
        android:textSize="@dimen/text_micro" />

</LinearLayout>
