<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/dp16"
              android:paddingRight="@dimen/dp16">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp48"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="@dimen/dp4">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_large"
                android:paddingRight="@dimen/dp4"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:textSize="@dimen/text_large"
                android:paddingLeft="@dimen/dp4"/>
    </LinearLayout>
                                    
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:layout_marginTop="@dimen/dp4">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp4"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp48"
                    android:text="@string/login_prompt"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/dp4"/>

            <EditText
                    android:layout_width="@dimen/dp144"
                    android:layout_height="@dimen/dp48"
                    android:id="@+id/identityField"
                    android:textSize="@dimen/text_medium"
                    android:inputType="text"
                    android:layout_marginLeft="@dimen/dp4"
                    android:layout_marginRight="@dimen/dp4"
                    android:gravity="center_vertical"/>

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp48"
                    android:layout_marginLeft="@dimen/dp4"/>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp48"
                    android:text="@string/password_prompt"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/dp4"/>

            <EditText
                    android:layout_width="@dimen/dp144"
                    android:layout_height="@dimen/dp48"
                    android:id="@+id/passwordField"
                    android:textSize="@dimen/text_medium"
                    android:inputType="textPassword"
                    android:singleLine="false"
                    android:layout_marginLeft="@dimen/dp4"
                    android:layout_marginRight="@dimen/dp4"
                    android:gravity="center_vertical"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp48"
                    android:text="@string/restore_link"
                    android:id="@+id/restoreLink"
                    android:textSize="@dimen/text_medium"
                    android:clickable="true"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_marginLeft="@dimen/dp4"
                    android:gravity="bottom|right"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/dp4" android:gravity="center">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_login_text"
                    android:id="@+id/rememberLoginBox"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp4">

        <Button
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:text="@string/login_text"
                android:id="@+id/loginButton"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>
    </LinearLayout>
         
 <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:text="@string/back_label"
                android:id="@+id/backButton2"
                android:linksClickable="false"
                android:singleLine="false"
                android:textSize="@dimen/text_medium"
                android:clickable="true"
                android:gravity="center_vertical"
                android:textColor="@android:color/holo_blue_light"
                android:layout_marginRight="@dimen/dp4"/>
           
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp4">
                                    
    </LinearLayout>
</LinearLayout>
                                