<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/dp16"
              android:paddingRight="@dimen/dp16">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp48"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="@dimen/dp4">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_large"
                android:paddingRight="@dimen/dp4"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Review"
                android:textSize="@dimen/text_large"
                android:paddingLeft="@dimen/dp4"/>
    </LinearLayout>
                                    
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:layout_marginTop="@dimen/dp4">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp4"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp48"
                    android:text="@string/Resturant"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/dp4"/>

            <EditText
                android:id="@+id/RestaurantField"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textSize="@dimen/text_medium" />

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp48"
                    android:layout_marginLeft="@dimen/dp4"/>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginBottom="@dimen/dp4"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp48"
                    android:text="@string/dish_optional_"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/dp4"/>

            <EditText
                android:id="@+id/dishField"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:singleLine="false"
                android:textSize="@dimen/text_medium" />

        </TableRow>
        
    </TableLayout>

    <LinearLayout
        android:id="@+id/review_2button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:layout_marginBottom="@dimen/dp4"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:text="@string/submit"
                android:id="@+id/review_check"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="@dimen/dp4"/>
    </LinearLayout>
    
</LinearLayout>
                                