<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.backendless.ucrspoon.login.RestaurantPage" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:isIndicator="true" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cuisinetype"
        android:layout_below="@+id/title"
        android:layout_marginTop="14dp"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/avgPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingBar1"
        android:layout_below="@+id/cuisinetype"
        android:layout_marginTop="37dp"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cuisinetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/avgPrice"
        android:layout_below="@+id/description"
        android:layout_marginTop="31dp"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/rateB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acReview"
        android:layout_alignBottom="@+id/acReview"
        android:layout_alignRight="@+id/ratingBar1"
        android:text="@string/Rate" />

    <Button
        android:id="@+id/acReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar1"
        android:layout_alignLeft="@+id/ratingBar1"
        android:layout_marginBottom="51dp"
        android:text="Reviews" />

	<Button
	    android:id="@+id/gal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/rateB"
	    android:layout_alignLeft="@+id/acReview"
	    android:layout_alignRight="@+id/button_Order2"
	    android:text="@string/gal" />

	<Button
	    android:id="@+id/button_Order2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/gal"
	    android:layout_alignLeft="@+id/avgPrice"
	    android:layout_alignRight="@+id/rateB"
	    android:text="Order" />

	<Button
	    android:id="@+id/mapb"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/button_Order2"
	    android:layout_alignLeft="@+id/avgPrice"
	    android:layout_alignRight="@+id/button_Order2"
	    android:text="@string/mapit" />

</RelativeLayout>